--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -20,5 +20,5 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no alumno@137.184.127.11 "
             cd ~/lemp-sites/pereyra_franco/firstrepo &&
-            git pull origin main
+            git pull origin develop
           "
